// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableActions getFieldCellActions should render correctly for undefined functions 1`] = `
Array [
  <ToggleColumn
    Component={[Function]}
    onToggleColumn={[MockFunction]}
    row={
      FieldRow {
        "columnsMeta": undefined,
        "dataViewField": undefined,
        "flattenedValue": "flattenedField",
        "isPinned": false,
        "name": "message",
      }
    }
  />,
]
`;

exports[`TableActions getFieldCellActions should render correctly for undefined functions 2`] = `Array []`;

exports[`TableActions getFieldCellActions should render the panels correctly for defined onFilter function 1`] = `
Array [
  <FilterExist
    Component={[Function]}
    onFilter={[MockFunction]}
    row={
      FieldRow {
        "columnsMeta": undefined,
        "dataViewField": undefined,
        "flattenedValue": "flattenedField",
        "isPinned": false,
        "name": "message",
      }
    }
  />,
  <ToggleColumn
    Component={[Function]}
    onToggleColumn={[MockFunction]}
    row={
      FieldRow {
        "columnsMeta": undefined,
        "dataViewField": undefined,
        "flattenedValue": "flattenedField",
        "isPinned": false,
        "name": "message",
      }
    }
  />,
]
`;

exports[`TableActions getFieldValueCellActions should render correctly for undefined functions 1`] = `Array []`;

exports[`TableActions getFieldValueCellActions should render the panels correctly for defined onFilter function 1`] = `
Array [
  <FilterIn
    Component={[Function]}
    onFilter={[MockFunction]}
    row={
      FieldRow {
        "columnsMeta": undefined,
        "dataViewField": undefined,
        "flattenedValue": "flattenedField",
        "isPinned": false,
        "name": "message",
      }
    }
  />,
  <FilterOut
    Component={[Function]}
    onFilter={[MockFunction]}
    row={
      FieldRow {
        "columnsMeta": undefined,
        "dataViewField": undefined,
        "flattenedValue": "flattenedField",
        "isPinned": false,
        "name": "message",
      }
    }
  />,
]
`;
